src/k8s/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-app2
  labels:
    app: helloworld-backend
spec:
  containers:
    - image: YOUR-HANDLE/hello-world-go:1.0.0
      name: helloworld-container
      ports:
        - containerPort: 7070
          name: http
          protocol: TCP
